--- a/Earendel_Serializer_Generated_Sim,_TestBed_2025_025.ipynb
+++ b/Earendel_Serializer_Generated_Sim,_TestBed_2025_025.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b218bdce",
    "metadata": {
     "colab": {
@@ -29,48 +29,10 @@
     "id": "b218bdce",
     "outputId": "ed8c3650-48c1-4025-fb94-bc2e6c000f18"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: rocketpy in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (1.6.1)\n",
-      "Requirement already satisfied: numpy>=1.13 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from rocketpy) (2.1.3)\n",
-      "Requirement already satisfied: scipy>=1.0 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from rocketpy) (1.14.1)\n",
-      "Requirement already satisfied: matplotlib>=3.0 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from rocketpy) (3.9.2)\n",
-      "Requirement already satisfied: netCDF4>=1.6.4 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from rocketpy) (1.7.2)\n",
-      "Requirement already satisfied: requests in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from rocketpy) (2.32.3)\n",
-      "Requirement already satisfied: pytz in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from rocketpy) (2024.2)\n",
-      "Requirement already satisfied: simplekml in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from rocketpy) (1.3.6)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib>=3.0->rocketpy) (1.3.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib>=3.0->rocketpy) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib>=3.0->rocketpy) (4.54.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib>=3.0->rocketpy) (1.4.7)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib>=3.0->rocketpy) (24.1)\n",
-      "Requirement already satisfied: pillow>=8 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib>=3.0->rocketpy) (11.0.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib>=3.0->rocketpy) (3.2.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib>=3.0->rocketpy) (2.9.0.post0)\n",
-      "Requirement already satisfied: cftime in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from netCDF4>=1.6.4->rocketpy) (1.6.4.post1)\n",
-      "Requirement already satisfied: certifi in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from netCDF4>=1.6.4->rocketpy) (2024.8.30)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from requests->rocketpy) (3.4.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from requests->rocketpy) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from requests->rocketpy) (2.2.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\laney\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from python-dateutil>=2.7->matplotlib>=3.0->rocketpy) (1.16.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.0 -> 24.3.1\n",
-      "[notice] To update, run: C:\\Users\\laney\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install rocketpy"
+    "# Uncomment (delete the #) the following line when running for the first time\n",
+    "#%pip install rocketpy"
    ]
   },
   {
@@ -111,12 +73,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "0410ae4d",
    "metadata": {
     "id": "0410ae4d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Environment' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m env \u001b[38;5;241m=\u001b[39m \u001b[43mEnvironment\u001b[49m()\n\u001b[0;32m      2\u001b[0m env\u001b[38;5;241m.\u001b[39mset_location(latitude\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42.69450673509998\u001b[39m, longitude\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m77.18622880458166\u001b[39m) \u001b[38;5;66;03m# Coordinates for URRG\u001b[39;00m\n\u001b[0;32m      3\u001b[0m env\u001b[38;5;241m.\u001b[39mset_elevation(\u001b[38;5;241m272.9\u001b[39m) \u001b[38;5;66;03m# From heightmap\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Environment' is not defined"
+     ]
+    }
+   ],
    "source": [
     "env = Environment()\n",
     "env.set_location(latitude=42.69450673509998, longitude=-77.18622880458166) # Coordinates for URRG\n",
@@ -1472,7 +1446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
